# Radio-Telescope

./: LICENSE  README.md
doc/: installPlantUML.sh  nat.sh  network.pu  overview.pu
doc/TCPserver/: a.out  new  server  tcpServer.cpp
doc/postJSON/: makefile  postJSON.cpp
edge/: CMakeLists.txt  Dockerfile  build-and-run  install_compilers.sh
edge/include/: postJSON.h  rotator.h
edge/src/: CMakeLists.txt  main.cpp  main.h
edge/src/TCPclient/: CMakeLists.txt  TCPclient.cpp  TCPclient.h
edge/src/httpPOSTjson/: CMakeLists.txt  README.md  postJSON.cpp
edge/src/rotatorManagement/: CMakeLists.txt  rotator.cpp
patent/: PatentApplication.tex
test/: CMakeLists.txt  a.out  ha.cpp  test.cpp  test1.cpp  thread.cpp
